fixed logo-behind-mobil-navbar (css media query), fixed horizontal scroll bar on popup open

--- a/css/creative.css
+++ b/css/creative.css
@@ -5,7 +5,9 @@
  */
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
 @import url("https://fonts.googleapis.com/css?family=Roboto");
+/*<><><><><><><><><><>*/
 /*<><><> GLOBAL <><><>*/
+/*<><><><><><><><><><>*/
 body,
 html {
   width: 100%;
@@ -63,7 +65,9 @@ img::-moz-selection {
   color: white;
   background: transparent; }
 
+/*....................*/
 /*..... CLASSES ......*/
+/*....................*/
 .bg-primary {
   background-color: #021B44 !important; }
 
@@ -82,7 +86,8 @@ img::-moz-selection {
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
-  fill: #b3b3b3; }
+  fill: #b3b3b3;
+  z-index: 20; }
 
 .svg-icon:hover .svg-logo {
   fill: white;
@@ -110,18 +115,17 @@ img::-moz-selection {
   color: rgba(255, 255, 255, 0.7); }
 
 .twitchOnline {
-  box-shadow: 0 0 0 0 rgba(0, 187, 25, 0.3);
-  -webkit-animation: avatarIconPulse 2s infinite;
-  animation: avatarIconPulse 2s infinite;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=0, Color='#00D10E')"; }
+  box-shadow: 0 0 0 0 rgba(0, 230, 30, 0.3);
+  -webkit-animation: avatarIconPulse 1.5s infinite;
+  animation: avatarIconPulse 1.5s infinite; }
 
 @-webkit-keyframes avatarIconPulse {
   0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(0, 187, 25, 0.3); }
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 230, 30, 0.3); }
   70% {
-    -webkit-box-shadow: 0 0 0 10px rgba(0, 187, 25, 0); }
+    -webkit-box-shadow: 0 0 0 10px rgba(0, 230, 30, 0); }
   100% {
-    -webkit-box-shadow: 0 0 0 0 rgba(0, 187, 25, 0); } }
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 230, 30, 0); } }
 
 @keyframes avatarIconPulse {
   0% {
@@ -160,7 +164,19 @@ img::-moz-selection {
   -ms-transform: scale(1.3);
   -o-transform: scale(1.3); }
 
+/*
+.hamburger-inner {
+  
+}*/
+.hamburger-inner, .hamburger-inner:after, .hamburger-inner:before {
+  background-color: #254B82; }
+
+.card-block {
+  width: 100%; }
+
+/* ###################*/
 /* ###### ID's ###### */
+/* ###################*/
 #backgroundVideo {
   position: fixed;
   top: 50%;
@@ -197,8 +213,12 @@ img::-moz-selection {
   transform-origin: center top; }
 
 #header-content {
-  z-index: 1030;
+  z-index: 999;
   position: relative; }
+
+@media (min-width: 992px) {
+  #header-content {
+    z-index: 1030; } }
 
 #scrollToTopButton {
   -webkit-transition: all 0.2s;
@@ -227,15 +247,17 @@ img::-moz-selection {
   -ms-transform: scale(1.1);
   -o-transform: scale(1.1); }
 
+/*
+#mobileNav {
+  
+  
+}*/
 #mobileNavHeader {
   max-width: none;
   background-color: #191919; }
 
 #mobileNavMenu {
   background-color: #191919; }
-
-.hamburger-inner, .hamburger-inner:after, .hamburger-inner:before {
-  background-color: #254B82; }
 
 .navbar-left {
   -webkit-transition: all 0.2s;
