--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -2,8 +2,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 
-
+/*<><><><><><><><><><>*/
 /*<><><> GLOBAL <><><>*/
+/*<><><><><><><><><><>*/
 
 body,
 html {
@@ -73,7 +74,10 @@ img::-moz-selection {
   background: transparent;
 }
 
+
+/*....................*/
 /*..... CLASSES ......*/
+/*....................*/
 
 .bg-primary {
   background-color: $theme-primary !important;
@@ -96,6 +100,7 @@ img::-moz-selection {
 .svg-logo {
   @include transition-all;
   fill: $gray-slightly-lighter;
+  z-index: 20;
 }
 
 .svg-icon:hover .svg-logo {
@@ -130,22 +135,20 @@ img::-moz-selection {
 }
 
 .twitchOnline {
-  box-shadow: 0 0 0 0 rgba(0, 187, 25, 0.3);
-  -webkit-animation: avatarIconPulse 2s infinite;
-  animation: avatarIconPulse 2s infinite;
-  //fallback standard filter for IE
-  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=0, Color='#00D10E')";
+  box-shadow: 0 0 0 0 rgba(0, 230, 30, 0.3);
+  -webkit-animation: avatarIconPulse 1.5s infinite;
+  animation: avatarIconPulse 1.5s infinite;
 }
 
 @-webkit-keyframes avatarIconPulse {
   0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(0, 187, 25, 0.3);
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 230, 30, 0.3);
   }
   70% {
-      -webkit-box-shadow: 0 0 0 10px rgba(0, 187, 25, 0);
+      -webkit-box-shadow: 0 0 0 10px rgba(0, 230, 30, 0);
   }
   100% {
-      -webkit-box-shadow: 0 0 0 0 rgba(0, 187, 25, 0);
+      -webkit-box-shadow: 0 0 0 0 rgba(0, 230, 30, 0);
   }
 }
 
@@ -192,7 +195,24 @@ img::-moz-selection {
   -o-transform:scale(1.3);
 }
 
+/*
+.hamburger-inner {
+  
+}*/
+
+.hamburger-inner, .hamburger-inner:after, .hamburger-inner:before {
+  background-color: #254B82;
+}
+
+//fixes horizontal scroll bar on open popup section
+.card-block {
+  width: 100%;
+}
+
+
+/* ###################*/
 /* ###### ID's ###### */
+/* ###################*/
 
 #backgroundVideo {
   position: fixed;
@@ -232,8 +252,16 @@ img::-moz-selection {
 }
 
 #header-content {
-  z-index: 1030;
+  z-index: 999;
   position: relative;
+}
+
+// hide mainLogo behind navbar on mobile
+@media (min-width: 992px) 
+{
+  #header-content {
+    z-index: 1030;
+  }
 }
 
 #scrollToTopButton {
@@ -263,10 +291,11 @@ img::-moz-selection {
   -o-transform:scale(1.1);
 }
 
+/*
 #mobileNav {
   
   
-}
+}*/
 
 #mobileNavHeader {
   max-width: none;
@@ -275,12 +304,4 @@ img::-moz-selection {
 
 #mobileNavMenu {
   background-color: #191919;
-}
-
-.hamburger-inner {
-  
-}
-
-.hamburger-inner, .hamburger-inner:after, .hamburger-inner:before {
-  background-color: #254B82;
 }
